fix: :lipstick: fix wrong color for aria-pressed tag

--- a/theme/less/components/tags.less
+++ b/theme/less/components/tags.less
@@ -35,12 +35,17 @@ a.fr-tag, button.fr-tag {
     --background-action-high-blue-france-hover: @blue-400-hover;
     --background-action-high-blue-france-active: @blue-400-active;
 
-    &[aria-selected="true"] {
-        &:extend(button.fr-tag[aria-pressed="true"]);
+    &[aria-pressed="true"] {
         --background-action-high-blue-france: @blue-400;
         &::after {
-            &:extend(button.fr-tag[aria-pressed="true"]::after);
             --text-action-high-blue-france: @blue-400;
+        }
+    }
+
+    &[aria-selected="true"] {
+        &:extend(button.fr-tag[aria-pressed="true"]);
+        &::after {
+            &:extend(button.fr-tag[aria-pressed="true"]::after);
         }
     }
 }
